Added structure + some basic comps

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import './variables.scss';
+
+p, em, i, li, ol {
+    font-family: $app-font;
+}
+
+h1, h2, h3, h4, h5 , h6, .h1, .h2, .h3, .h4, .h5, .h6, b, strong, blockquote {
+    font-family: $app-font;
+    font-weight: bold;
+}
