--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ p, em, i, li, ol {
     font-family: $app-font;
 }
 
-h1, h2, h3, h4, h5 , h6, .h1, .h2, .h3, .h4, .h5, .h6, b, strong, blockquote {
+h1, h2, h3, h4, h5 , h6, .h1, .h2, .h3, .h4, .h5, .h6, b, strong, blockquote, button {
     font-family: $app-font;
     font-weight: bold;
 }
