--- a/src/app/validate/question/question.component.html
+++ b/src/app/validate/question/question.component.html
@@ -2,3 +2,4 @@
 <app-answer-type
     [questionType]="questionData[currentQuestion ? currentQuestion : 0].questionType"
 ></app-answer-type>
+<app-navigation [currentQuestion]="currentQuestion"></app-navigation>
