--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,13 +12,14 @@
         margin: 0 auto;
         color: white;
         text-align: center;
+        padding: 0 30px;
 
         h3 {
             width: 250px;
         }
         
         img {
-            width: 200px;
+            width: 125px;
             padding-bottom: 25px;
         }
     }
