Split timeline returns + added inform comp

--- a/src/app/inform/inform.component.html
+++ b/src/app/inform/inform.component.html
@@ -1,3 +1,6 @@
-<p>
-  inform works!
-</p>
+<div class="block">
+  <h5>{{ dataObj.incident }}</h5>
+  <h6>{{ dataObj.location }}</h6>
+</div>
+<app-what-to-do></app-what-to-do>
+<app-timeline></app-timeline>
