--- a/src/app/inform/what-to-do/what-to-do-item/what-to-do-item.component.html
+++ b/src/app/inform/what-to-do/what-to-do-item/what-to-do-item.component.html
@@ -1,3 +1,6 @@
-<p>
-  what-to-do-item works!
-</p>
+<div class="block block--window">
+  <div class="block--content">
+    <img class="img-fluid" src="../../../../assets/img/window.svg" alt="Inform icon" />
+    <p>{{ 'Sluit ramen en deuren' }}</p>
+  </div>
+</div>
