--- a/src/app/timeline/timeline-item/timeline-item.component.scss
+++ b/src/app/timeline/timeline-item/timeline-item.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles.scss';
+@import '../../../styles.scss';
 
 .timeline-item {
     border-left: 2px dashed $app-gray;
@@ -97,6 +97,23 @@
             cursor: not-allowed;
             border-color: $app-gray;
             color: $app-gray;
+        }
+
+    }
+
+    &__location {
+        padding-top: 10px;
+        padding-left: 25px;
+
+        img {
+            width: 15px;
+        }
+
+        span {
+            color: $app-gray;
+            font-size: 14px;
+            padding-left: 5px;
+            line-height: 15px;
         }
 
     }
