--- a/src/app/validate/feed/feed.component.html
+++ b/src/app/validate/feed/feed.component.html
@@ -14,4 +14,4 @@ class="block block--inform">
     <img src="../../../assets/img/clock.svg" alt="Clock icon" />
     <p>{{ dateObj | date: 'medium' }}</p>
 </div>
-<app-feed-timeline></app-feed-timeline>
+<app-timeline></app-timeline>
