--- a/src/app/supply-data/supply-data.component.html
+++ b/src/app/supply-data/supply-data.component.html
@@ -1,3 +1,36 @@
-<p>
-  supply-data works!
-</p>
+<div class="row">
+    <div class="col-12">
+        <a routerLink="/inform/1" class="block block--inform">
+          <div class="block--content">
+              <img class="img-fluid" src="../assets/img/inform.svg" alt="inform icon" />
+          </div>
+        </a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <a routerLink="/inform/1" class="block block--camera">
+          <div class="block--content">
+              <img class="img-fluid" src="../assets/img/camera.svg" alt="camera icon" />
+          </div>
+        </a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <a routerLink="/inform/1" class="block block--voice">
+          <div class="block--content">
+              <img class="img-fluid" src="../assets/img/voice.svg" alt="voice icon" />
+          </div>
+        </a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <a routerLink="/inform/1" class="block block--message">
+            <div class="block--content">
+                <img class="img-fluid" src="../assets/img/message.svg" alt="message icon" />
+            </div>
+        </a>
+    </div>
+</div>
