--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,7 @@ h1, h2, h3, h4, h5 , h6, .h1, .h2, .h3, .h4, .h5, .h6, b, strong, blockquote, bu
     font-family: $app-font;
     font-weight: bold;
 }
+
+body {
+    overflow-x: hidden;
+}
